--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "antdv-admin-starter",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "author": "sokach",
+  "packageManager": "pnpm@8.14.0",
+  "description": "基础 vue3 项目脚手架",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,21 +15,37 @@
     "commit": "git add -A && git-cz"
   },
   "dependencies": {
-    "vue": "^3.3.11"
+    "@ant-design/icons-vue": "^7.0.1",
+    "@types/node": "^20.11.7",
+    "@vueuse/core": "^10.7.2",
+    "ant-design-vue": "^4.1.1",
+    "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
+    "mitt": "^3.0.1",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.8.0",
     "eslint": "^8.56.0",
     "husky": "^9.0.6",
     "lint-staged": "^15.2.0",
+    "mockjs": "^1.1.0",
+    "picocolors": "^1.0.0",
     "typescript": "^5.2.2",
+    "unocss": "^0.58.4",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
+    "vite-plugin-mock": "^3.0.1",
     "vue-tsc": "^1.8.25"
   },
   "lint-staged": {
